--- a/templates/partialsBack/sidebar.html.twig
+++ b/templates/partialsBack/sidebar.html.twig
@@ -128,6 +128,56 @@
         </li>
     </ul>
 </li>
+<li class="app-sidebar__heading">Fournisseurs</li>
+<li>
+    <a href="#">
+        <i class="metismenu-icon pe-7s-id"></i>
+        Gestion Fournisseurs
+        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+    </a>
+    <ul>
+            <li>
+            <a href="{{ path('app_fournisseur_new') }}">
+                <i class="metismenu-icon"></i>
+                Ajouter un Fournisseur
+            </a>
+        </li>
+        <li>
+            <a href="{{ path('app_fournisseur_index') }}">
+                <i class="metismenu-icon"></i>
+                Liste des Fournisseurs
+            </a>
+        </li>
+
+    </ul>
+</li>
+
+<li class="app-sidebar__heading">Produits</li>
+<li>
+    <a href="#">
+        <i class="metismenu-icon pe-7s-id"></i>
+        Gestion Produits
+        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+    </a>
+    <ul>
+            <li>
+            <a href="{{ path('dashboard_produit_new') }}">
+                <i class="metismenu-icon"></i>
+                Ajouter un Produit
+            </a>
+        </li>
+        <li>
+            <a href="{{ path('app_produit_indexback') }}">
+                <i class="metismenu-icon"></i>
+                Liste des Produits
+            </a>
+        </li>
+
+    </ul>
+</li>
+
+
+
 
                 <li class="app-sidebar__heading">PRO Version</li>
                 <li>
