--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -14,6 +14,7 @@
                       <li><a href="{{ path('app_home') }}" class="active">Acceuil</a></li>
                       <li><a href="{{ path('app_event_index') }}">Évènements</a></li>
                       <li><a href="{{ path('app_espace_index') }}">Espaces</a></li>
+                      <li><a href="{{ path('app_produit_index') }}">Produits</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
                       <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
                   </ul>   
