--- a/templates/espace/show.html.twig
+++ b/templates/espace/show.html.twig
@@ -27,7 +27,7 @@
                   </li>
                   <li class="nav-item" role="presentation">
                     <button class="nav-link animate__animated animate__fadeInUp" id="info-tab" data-bs-toggle="tab" data-bs-target="#info" type="button" role="tab" aria-controls="info" aria-selected="false">
-                      Infos Supplémentaires
+                     🛑LIVE 🎞️🎥
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
@@ -79,22 +79,19 @@
                 </div>
                 {# Onglet Infos Supplémentaires #}
                 <div class="tab-pane fade animate__animated animate__fadeIn" id="info" role="tabpanel" aria-labelledby="info-tab">
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <div class="animate__animated animate__fadeInUp">
-                        <h4>Informations Supplémentaires</h4>
-                        <p>
-                          Vous pouvez inclure ici une description détaillée, les conditions de réservation ou d'autres informations pertinentes concernant cet espace.
-                        </p>
-                        <div class="icon-button mt-3">
-                          <a href="{{ path('app_espace_index') }}" class="btn btn-secondary">
-                            <i class="fa fa-arrow-left"></i> Retour à la liste
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="animate__animated animate__fadeInUp">
+        <h4>🎥 Vue en Direct</h4>
+        <p>Flux en direct depuis l’espace <strong>{{ espace.nomEspace }}</strong> :</p>
+        <div class="ratio ratio-16x9" style="border-radius: 12px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+          <iframe src="{{ liveURL }}" allowfullscreen frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
                 {# Onglet Organisateurs #}
                 <div class="tab-pane fade animate__animated animate__fadeIn" id="organisateurs" role="tabpanel" aria-labelledby="organisateurs-tab">
                   <div class="row">
@@ -182,5 +179,21 @@
       transform: translateY(-5px);
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     }
+    <style>
+  .ratio-16x9 {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 0;
+  }
+  .ratio-16x9 iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+</style>
+
   </style>
 {% endblock %}
